# mist

./: .justfile  CHANGELOG.md  Cargo.toml  README.md  justfile  renovate.json  test  test.rs  toast.yml
.drone/: drone.jsonnet
.drone/scripts/: create-release.sh  publish-mpr.sh  run-tests.sh
.github/workflows/: pr.yml
completions/: mari.bash  mist.bash  mpr.bash
makedeb/: PKGBUILD  mist.postinst
man/: mari.1.adoc  mist.1.adoc  mpr.1.adoc
mist-cli/: Cargo.toml
mist-cli/completions/: mist.bash
mist-cli/src/: cache.rs  install.rs  install_util.rs  list.rs  progress.rs  update.rs  upgrade.rs  util.rs
mist-gtk/: Cargo.toml
src/: args.rs  cache.rs  cli.rs  clone.rs  color.rs  comment.rs  info.rs  install.rs  install_util.rs  list.rs  list_comments.rs  main.rs  message.rs  mpr_cache.rs  out.sh  pkglist.rs  progress.rs  quick_list.rs  remove.rs  request.rs  search.rs  style.rs  update.rs  upgrade.rs  util.rs  whoami.rs
tests/: tests.bats
