[package]
name = "mist"
version = "0.6.2"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com"]
description = "The official command-line interface for the makedeb Package Repository"
edition = "2021"
homepage = "https://github.com/makedeb/mist"
repository = "https://github.com/makedeb/mist"
license = "GPL-3.0-or-later"
keywords = ["makedeb", "mpr", "apt", "mpr-helper", "helper"]
categories = ["command-line-utilities"]

[dependencies]
bat = "0.21.0"
colored = { git = "https://github.com/mackwic/colored" }
chrono = "0.4.19"
clap = { version = "3.2.14", features = ["cargo", "env"] }
dirs = "4.0.0"
edit = "0.1.4"
exitcode = "1.1.2"
flate2 = "1.0.24"
lazy_static = "1.4.0"
quit = "1.1.4"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rust-apt = "0.3.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tempfile = "3.3.0"
