[package]
name = "mist"
version = "0.9.4"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com"]
description = "The official command-line interface for the makedeb Package Repository"
edition = "2021"
homepage = "https://github.com/makedeb/mist"
repository = "https://github.com/makedeb/mist"
license = "GPL-3.0-or-later"
keywords = ["makedeb", "mpr", "apt", "mpr-helper", "helper"]
categories = ["command-line-utilities"]

[dependencies]
bat = { version = "0.21.0", default-features = false, features = ["paging", "regex-fancy"]}
colored = { git = "https://github.com/mackwic/colored" }
chrono = "0.4.19"
clap = { version = "3.2.16", features = ["cargo", "env"] }
dirs = "4.0.0"
edit = "0.1.4"
exitcode = "1.1.2"
flate2 = "1.0.24"
lazy_static = "1.4.0"
makedeb-srcinfo = "0.8.0"
quit = "1.1.4"
regex = "1.6.0"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
rust-apt = { git = "https://gitlab.com/volian/rust-apt", branch = "fix/tagfile-parsing" }
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
tempfile = "3.3.0"
termsize = "0.1.6"
users = "0.11.0"
which = "4.3.0"
