[package]
name = "mist"
version = "0.12.0"
authors = ["Hunter Wittenborn <hunter@hunterwittenborn.com"]
description = "The official command-line interface for the makedeb Package Repository"
edition = "2021"
homepage = "https://github.com/makedeb/mist"
repository = "https://github.com/makedeb/mist"
license = "GPL-3.0-or-later"
keywords = ["makedeb", "mpr", "apt", "mpr-helper", "helper"]
categories = ["command-line-utilities"]

[dependencies]
bat = { version = "0.24.0", default-features = false, features = ["paging", "regex-fancy"]}
colored = { git = "https://github.com/mackwic/colored" }
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["cargo", "env"] }
dirs = "5.0.1"
edit = "0.1.5"
exitcode = "1.1.2"
flate2 = "1.0.28"
lazy_static = "1.4.0"
makedeb-srcinfo = "0.8.1"
quit = "2.0.0"
regex = "1.10.4"
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust-apt = { git = "https://gitlab.com/volian/rust-apt", rev = "2f1633d26c9dee69d5852d1fcbf84b2586876555" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tempfile = "3.10.1"
termsize = "0.1.6"
users = "0.11.0"
which = "6.0.1"
